RESOLVED FIXED92541
Fix COMPILE_ASSERT for InlineFlowBox growing
https://bugs.webkit.org/show_bug.cgi?id=92541
Summary Fix COMPILE_ASSERT for InlineFlowBox growing
Scott Graham
Reported 2012-07-27 13:06:55 PDT
Fix COMPILE_ASSERT for InlineFlowBox growing
Attachments
Patch (1.42 KB, patch)
2012-07-27 13:07 PDT, Scott Graham
mitz: review+
mitz: commit-queue-
Scott Graham
Comment 1 2012-07-27 13:07:31 PDT
Scott Graham
Comment 2 2012-07-27 13:08:01 PDT
Per Darin's recommendation here: https://bugs.webkit.org/show_bug.cgi?id=92524
mitz
Comment 3 2012-07-27 13:09:21 PDT
Comment on attachment 155034 [details] Patch Thank you for the prompt fix!
mitz
Comment 4 2012-07-27 13:42:01 PDT
Note You need to log in before you can comment on or make changes to this bug.