Fix COMPILE_ASSERT for InlineFlowBox growing https://bugs.webkit.org/show_bug.cgi?id=92541

Patch by Scott Graham <scottmg@chromium.org> on 2012-07-27
Reviewed by Dan Bernstein.

Use unsigned instead of bool to keep size small on Windows.

No new tests.

* rendering/InlineFlowBox.h:
(InlineFlowBox):



Canonical link: https://commits.webkit.org/110348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123913 268f45cc-cd09-0410-ab3c-d52691b4dbfc